objects/Case.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Bounce Back</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Clinic Notification</fullName>
                </value>
                <value>
                    <fullName>FAX Received</fullName>
                </value>
                <value>
                    <fullName>Services Requested</fullName>
                </value>
                <value>
                    <fullName>Conduct Survey</fullName>
                </value>
                <value>
                    <fullName>Reply Text</fullName>
                </value>
                <value>
                    <fullName>Request Stop</fullName>
                </value>
                <value>
                    <fullName>Reschedule FU 1</fullName>
                </value>
                <value>
                    <fullName>Reschedule FU 2</fullName>
                </value>
                <value>
                    <fullName>Reschedule FU 3</fullName>
                </value>
                <value>
                    <fullName>Schedule Delivery</fullName>
                </value>
                <value>
                    <fullName>Schedule Follow-Up 1</fullName>
                </value>
                <value>
                    <fullName>Schedule Follow-Up 2</fullName>
                </value>
                <value>
                    <fullName>Schedule Follow-Up 3</fullName>
                </value>
                <value>
                    <fullName>HCP Follow-Up 1</fullName>
                </value>
                <value>
                    <fullName>HCP Follow-Up 2</fullName>
                </value>
                <value>
                    <fullName>HCP Follow-Up 3</fullName>
                </value>
                <value>
                    <fullName>PT Follow-Up 1</fullName>
                </value>
                <value>
                    <fullName>PT Follow-Up 2</fullName>
                </value>
                <value>
                    <fullName>PT Follow-Up 3</fullName>
                </value>
                <value>
                    <fullName>PT Welcome Call</fullName>
                </value>
                <value>
                    <fullName>Reschedule Delivery</fullName>
                </value>
                <value>
                    <fullName>Reschedule Delivery 1</fullName>
                </value>
                <value>
                    <fullName>Reschedule Delivery 2</fullName>
                </value>
                <value>
                    <fullName>Reschedule Delivery 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>EmailRegQueue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>EmailRegQueue</label>
        <queue>EmailRegQueue</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SalesManagers_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>SalesManagers</label>
        <queue>SalesManagers</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
</CustomObject>